--- a/studio/portfolio/package.json
+++ b/studio/portfolio/package.json
@@ -2,20 +2,22 @@
   "name": "portfolio",
   "private": true,
   "version": "1.0.0",
-  "description": "",
   "main": "package.json",
   "author": "Rob Osborne <ozborne132@gmail.com>",
   "license": "UNLICENSED",
   "scripts": {
-    "start": "sanity start",
-    "build": "sanity build"
+    "build": "sanity build",
+    "deploy": "sanity deploy",
+    "dev": "sanity start",
+    "start": "sanity start"
   },
   "keywords": [
     "sanity"
   ],
   "dependencies": {
     "@sanity/base": "^2.30.1",
-    "@sanity/core": "^2.30.1",
+    "@sanity/cli": "^2.30.0",
+    "@sanity/core": "^0.139.2",
     "@sanity/default-layout": "^2.30.1",
     "@sanity/default-login": "^2.30.1",
     "@sanity/desk-tool": "^2.30.1",
@@ -23,9 +25,8 @@
     "@sanity/vision": "^2.30.1",
     "eslint": "^8.6.0",
     "prop-types": "^15.7",
-    "react": "^17.0",
-    "react-dom": "^17.0",
+    "react": "^16.2",
+    "react-dom": "^16.2",
     "styled-components": "^5.2.0"
-  },
-  "devDependencies": {}
+  }
 }
