--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
   "license": "ISC",
   "homepage": "https://github.com/rosborne132/portfolio#readme",
   "workspaces": [
-    "studio/portfolio",
+    "studio",
     "web"
   ],
   "devDependencies": {
+    "@sanity/cli": "^2.30.0",
     "eslint": "^8.17.0",
     "eslint-config-custom": "^0.0.0",
     "prettier": "^2.6.2",
