--- a/web/package.json
+++ b/web/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "deploy": "vercel"
+    "lint": "next lint"
   },
   "dependencies": {
     "@portabletext/react": "^1.0.6",
